Use exec-maven-plugin instead of maven-jlink-plugin