@@ -31,6 +31,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <imageName>${project.artifactId}-${project.version}</imageName>
         <maven.compiler.source>16</maven.compiler.source>
         <maven.compiler.target>16</maven.compiler.target>
     </properties>
@@ -50,32 +51,39 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jlink-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <classifier>${package.os.name}-${os.arch}</classifier>
-                    <addModules>
-                        <addModule>jdk.internal.jvmstat</addModule>
-                    </addModules>
-                    <addOptions>
-                        <addOption>--add-exports jdk.internal.jvmstat/sun.jvmstat.monitor=perfreader</addOption>
-                        <addOption>--add-exports jdk.internal.jvmstat/sun.jvmstat.perfdata.monitor=perfreader</addOption>
-                    </addOptions>
-                    <compress>2</compress>
-                    <launcher>perfreader=perfreader/com.yasuenag.perfreader.Main</launcher>
-                    <noHeaderFiles>true</noHeaderFiles>
-                    <noManPages>true</noManPages>
-                    <stripDebug>true</stripDebug>
-                    <verbose>true</verbose>
-                </configuration>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
                         <id>jlink</id>
                         <phase>package</phase>
                         <goals>
-                            <goal>jlink</goal>
+                            <goal>exec</goal>
                         </goals>
+                        <configuration>
+                            <executable>${java.home}/bin/jlink</executable>
+                            <arguments>
+                                <argument>--module-path</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                                <argument>--add-modules</argument>
+                                <argument>perfreader</argument>
+                                <argument>--add-options</argument>
+                                <!--
+                                    add-option does not accept argument which stats with '\-\-',
+                                    so HeapDumpOnOutOfMemoryError is added to the top of args to avoid it.
+                                -->
+                                <argument>-XX:+HeapDumpOnOutOfMemoryError --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=perfreader --add-exports=jdk.internal.jvmstat/sun.jvmstat.perfdata.monitor=perfreader</argument>
+                                <argument>--launcher</argument>
+                                <argument>${project.artifactId}=perfreader/com.yasuenag.perfreader.Main</argument>
+                                <argument>--output</argument>
+                                <argument>${project.build.directory}/${imageName}</argument>
+                                <argument>--compress</argument>
+                                <argument>2</argument>
+                                <argument>--no-header-files</argument>
+                                <argument>--no-man-pages</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -92,7 +100,6 @@
             </activation>
             <properties>
                 <package.os.name>linux</package.os.name>
-                <shell.ext/>
             </properties>
         </profile>
         <profile>
